<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Enter your email address!</string>
    <string name="ButtonText">LOGIN</string>
    <string name="hint">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="profileName">Your profile\nYour name:</string>
    <string name="hintProfile">Enter your email</string>
    <string name="emailMsg">Your email:</string>
    <string name="yourPicture">Your picture:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="clickBtn">Click the button above to take a picture</string>
    <string name="sendButton">send</string>
    <string name="typehere">type here</string>
    <string name="receiveButton">receive</string>
    <string name="deleteThis">delete this?</string>
    <string name="selectedRow">The selected row is: </string>
    <string name="dbID">The database id is:  </string>
    <string name="noBtn">No</string>
    <string name="yesBtn">Yes</string>
    <string name="gotoChat">go to chat</string>
    <string name="gotoWeather">GO TO WEATHER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gotoToolbarPage">Go to Toolbar page</string>
    <string name="itemOneTitle">One</string>
    <string name="itemTwoTitle">Two</string>
    <string name="itemThreeTitle">Three</string>
    <string name="itemFourTitle">Four</string>
</resources>