<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/icon1"

        android:orderInCategory="100"
        android:title="@string/itemOneTitle"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/item2"
        android:icon="@drawable/icon2"
        android:orderInCategory="110"
        android:title="@string/itemTwoTitle"
        app:showAsAction="always" />

    <item
        android:id="@+id/item3"
        android:icon="@drawable/icon3"
        android:orderInCategory="120"
        android:title="@string/itemThreeTitle"
        app:showAsAction="always" />


    <item
        android:id="@+id/item4"
        android:orderInCategory="140"
        android:title="@string/itemFourTitle"
        app:showAsAction="never" />

</menu>